add randomPlanetName & fix UI issue

--- a/PlanetWallet/Resources/3_Wallet.storyboard
+++ b/PlanetWallet/Resources/3_Wallet.storyboard
@@ -638,7 +638,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yd5-wD-T4G" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-                                <rect key="frame" x="20" y="87.5" width="335" height="55"/>
+                                <rect key="frame" x="20" y="91.5" width="335" height="55"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageInputInvisibleDarkgray" translatesAutoresizingMaskIntoConstraints="NO" id="e62-i1-s8W" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                                         <rect key="frame" x="289" y="8" width="40" height="40"/>
@@ -737,7 +737,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter private key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lAd-jJ-Ecc" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                <rect key="frame" x="20" y="60" width="105.5" height="16.5"/>
+                                <rect key="frame" x="20" y="60" width="116" height="20.5"/>
                                 <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                 <color key="textColor" red="0.36078431370000003" green="0.34901960780000002" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -749,10 +749,10 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ta9-Yq-KRu">
-                                <rect key="frame" x="20" y="147.5" width="346" height="25"/>
+                                <rect key="frame" x="20" y="151.5" width="346" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter the correct Private Key." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jqj-3q-26u">
-                                        <rect key="frame" x="0.0" y="5" width="227" height="15"/>
+                                        <rect key="frame" x="0.0" y="5" width="249" height="15"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                         <color key="textColor" red="1" green="0.0" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -803,11 +803,13 @@
                         <outlet property="pwTextFieldContainer" destination="Yd5-wD-T4G" id="L1V-Zb-wB1"/>
                         <outlet property="textField" destination="GIR-he-1iA" id="yFL-cO-43U"/>
                         <segue destination="zCZ-oN-aWM" kind="presentation" identifier="privatekeyimport_to_planetname" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="c1d-Ko-JM9"/>
+                        <segue destination="yfr-rO-QP8" kind="unwind" identifier="unwind_to_main" unwindAction="unwindToMainControllerWithSegue:" id="VVZ-Lv-L4b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="23q-Gl-GtD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="yfr-rO-QP8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1049" y="777"/>
+            <point key="canvasLocation" x="1007" y="777"/>
         </scene>
         <!--Mnemonic Import Controller-->
         <scene sceneID="8DY-sL-AgP">
@@ -1044,9 +1046,11 @@
                         <outlet property="pwTextFieldContainer" destination="sgX-yq-wWL" id="Iq4-Mw-htC"/>
                         <outlet property="pwTextfield" destination="sUt-1L-K2m" id="hqb-5L-dIo"/>
                         <segue destination="zCZ-oN-aWM" kind="presentation" identifier="mnemonicimport_to_planetname" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="VrT-Ia-2CA"/>
+                        <segue destination="ebe-ej-YeH" kind="unwind" identifier="unwind_to_main" unwindAction="unwindToMainControllerWithSegue:" id="Qvd-LZ-5RX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d4R-wt-yrg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ebe-ej-YeH" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="343" y="777"/>
         </scene>
